# ErlikGameEngine

./: .gitignore  CMakeLists.txt  README.md
assets/: level1 - Kopya.csv  level1.csv  level_aabb.csv  level_city.tmj  level_multi.tmj  tileset32.tsx
scripts/: setup-vcpkg-windows.md
src/: main.cpp
src/engine/: Animator.cpp  Animator.h  AnimatorController.cpp  AnimatorController.h  Application.cpp  Application.h  Audio.cpp  Audio.h  Input.cpp  Input.h  Particles.cpp  Particles.h  Physics.cpp  Physics.h  Renderer2D.cpp  Renderer2D.h  ResourceManager.cpp  ResourceManager.h  SpriteAtlas.cpp  SpriteAtlas.h  TMJMap.cpp  TMJMap.h  TextRenderer.h  Texture.cpp  Texture.h  Tilemap.cpp  Tilemap.h
